context: Ensure force_gc flag is not lost if the idle is scheduled

If the first caller that triggers the idle happens to be non-forcing,
all later forcing calls would be ignored.

https://gitlab.gnome.org/GNOME/gjs/issues/150

Closes: #150

(cherry picked from commit c0420db97ea574afe80664d3835995fba0c1e47b)